--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
   border-radius: 20px;
   width: max-content;
   box-shadow: 10px 10px 5px grey;
-  width: 1500px;
-  height: 1500px;
+  width: 650px;
+  height: 620px;
   align-items: center;
   justify-content: flex-start;
 }
@@ -22,7 +22,7 @@ h1 {
   text-align: center;
   color: darkgoldenrod;
   font-size: 80px;
-  margin-bottom: 40px;
+  margin-top: -5px;
 }
 .twobytwo {
   flex-grow: 1;
@@ -38,32 +38,33 @@ h1 {
 
 .container {
   box-sizing: content-box;
-  width: 1000px;
-  height: 1000px;
+  width: 400px;
+  height: 400px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   align-items: flex-start;
-  border-left: solid grey 6px;
-  border-right: solid grey 3px;
   background-color: white;
+  margin-top: -50px;
 } 
 
 .buttons {
   display:flex;
   flex-direction: row;
-  gap: 100px;
-  margin-top: 30px;
+  margin-top: 10px;
+  width: 400px;
+  justify-content: space-between;
 }
 
 .buttons img {
-  width: 200px;
+  width: 50px;
   height: auto;
   cursor: pointer;
+
 }
 
 .buttons div p {
-  font-size: 30px;
+  font-size: 12px;
   font-family: monospace;
   color: white;
   text-align: center;
