--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   display: flex;
   flex: 0 0 0;
   flex-direction: column;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-left: auto;
   margin-right: auto;
   background-color: darkred;
